# skills-soft-link

./: .gitignore  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: prototype-brief.md
scripts/: normalize-windows-msi.ps1  normalize-windows-nsis.ps1  package-windows-portable.ps1
src/: App.tsx  api.ts  app-base.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: per-user-main.wxs  zh-CN.wxl
