[package]
name = "skills-soft-link"
version = "0.1.0"
description = "Skills 软链接管理器"
authors = ["LX"]
edition = "2021"

[lib]
name = "skills_soft_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
junction = "2.0.0"
